fix: private-design-output package

--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -1,28 +1,30 @@
 // Required base styles
-@use "grid/src/scss/component" as grid;
-@use "body/src/scss/component" as body;
+@use "@uqds/grid/src/scss/main" as grid;
+@use "@uqds/body/src/scss/main" as body;
+@use "@uqds/layout/src/scss/main" as layout;
 
 // Customise below
-@use "accordion/src/scss/component" as accordion;
-@use "alert/src/scss/component" as alert;
-@use "blockquote/src/scss/component" as blockquote;
-@use "breadcrumb/src/scss/component" as breadcrumb;
-@use "button/src/scss/component" as button;
-@use "card/src/scss/component" as card;
-@use "footer/src/scss/component" as uq-footer;
-@use "header/src/scss/component" as uq-header;
-@use "form/src/scss/component" as form;
-@use "grid-menu/src/scss/component" as grid-menu;
-@use "hero/src/scss/component" as hero;
-@use "icon/src/scss/component" as icons;
-@use "lists/src/scss/component" as lists;
-@use "loading-spinner/src/scss/component" as loading-spinner;
-@use "pagination/src/scss/component" as pagination;
-@use "pane/src/scss/component" as pane;
-@use "previous-next/src/scss/component" as previous-next;
-@use "progression/src/scss/component" as progression;
-@use "sections/src/scss/component" as sections;
-@use "side-nav/src/scss/component" as side-nav;
-@use "site-header/src/scss/component" as site-header;
-@use "table/src/scss/component" as table;
-@use "tabs/src/scss/component" as tabs;
+@use "@uqds/navigation/src/scss/main" as navigation;
+@use "@uqds/accordion/src/scss/main" as accordion;
+@use "@uqds/alert/src/scss/main" as alert;
+@use "@uqds/blockquote/src/scss/main" as blockquote;
+@use "@uqds/breadcrumb/src/scss/main" as breadcrumb;
+@use "@uqds/button/src/scss/main" as button;
+@use "@uqds/card/src/scss/main" as card;
+@use "@uqds/footer/src/scss/main" as uq-footer;
+@use "@uqds/header/src/scss/main" as uq-header;
+@use "@uqds/form/src/scss/main" as form;
+@use "@uqds/grid-menu/src/scss/main" as grid-menu;
+@use "@uqds/hero/src/scss/main" as hero;
+@use "@uqds/icon/src/scss/main" as icons;
+@use "@uqds/lists/src/scss/main" as lists;
+@use "@uqds/loading-spinner/src/scss/main" as loading-spinner;
+@use "@uqds/pagination/src/scss/main" as pagination;
+@use "@uqds/pane/src/scss/main" as pane;
+@use "@uqds/previous-next/src/scss/main" as previous-next;
+@use "@uqds/progression/src/scss/main" as progression;
+@use "@uqds/sections/src/scss/main" as sections;
+@use "@uqds/side-nav/src/scss/main" as side-nav;
+@use "@uqds/site-header/src/scss/main" as site-header;
+@use "@uqds/table/src/scss/main" as table;
+@use "@uqds/tabs/src/scss/main" as tabs;
