--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -38,6 +38,7 @@
     text-decoration: none;
 
     &:hover {
+      background-color: transparent;
       color: core.$utility-600;
       text-decoration: none;
 
