--- a/packages/pagination/src/scss/_component.scss
+++ b/packages/pagination/src/scss/_component.scss
@@ -21,6 +21,7 @@
       text-decoration: none;
 
       &:hover {
+        background-color: transparent;
         color: core.$utility-600;
         text-decoration: underline;
       }
