--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps.scss
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps.scss
@@ -1,3 +1,59 @@
-@use "@uqds/app-maps/src/scss/_component" as *;
+@use "@uqds/core/src/scss/_global" as core;
+@use "@uqds/app-maps/src/scss/_global" as icon-constants;
+@use "@uqds/app-maps/src/scss/_component" as icon;
 @use "@uqds/button/src/scss/_component" as *;
-@use "@uqds/icon/src/scss/_component" as *;
+
+.uqds-icon {
+  &-list {
+    display: grid;
+    grid-gap: core.$space-m;
+    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+
+    &__item {
+      border-radius: 8px;
+      padding: core.$space-m;
+      text-align: center;
+      background-color: core.$grey-50;
+
+      &__icon {
+        margin-bottom: core.$space-s;
+
+        .uq-icon {
+          &::before {
+            height: 2rem;
+            width: 2rem;
+            margin: 0;
+          }
+        }
+      }
+
+      &__label {
+        border-top: 1px solid core.$grey-300;
+        padding-top: core.$space-s;
+        color: core.$grey-700;
+        line-height: 1;
+      }
+    }
+  }
+
+  &--green-example {
+    display: inline-block;
+    height: 1.5rem;
+    width: 1.5rem;
+    vertical-align: middle;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 100%;
+      background-image: url(icon-constants.get-icon(
+        "agriculture-and-environment--agriculture-machine-tractor",
+        core.$success-500
+      ));
+    }
+  }
+}
