--- a/packages/storybook-html/stories/deprecated/layout.scss
+++ b/packages/storybook-html/stories/deprecated/layout.scss
@@ -1,4 +1,4 @@
-@use "../../../../../node_modules/@uqds/core/src/scss/global" as core;
+@use "../../../../node_modules/@uqds/core/src/scss/global" as core;
 
 .uqds-base-layout-grid {
   background: repeating-linear-gradient(
