fix: improved spacing rules, added styles for cards

--- a/packages/layout/src/scss/_sections.scss
+++ b/packages/layout/src/scss/_sections.scss
@@ -2,12 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: var(--layout-section-gap);
-}
+  padding-bottom: var(--layout-section-gap);
 
-.uq-sections + .uq-footer {
-  margin-top: var(--layout-section-gap);
-}
-
-.uq-sections:has(.uq-section--shaded:last-child) + .uq-footer {
-  margin-top: 0;
+  & .uq-sections {
+    padding-bottom: 0;
+  }
 }
