chore: further qa fixes

--- a/packages/card/src/scss/_story-card.scss
+++ b/packages/card/src/scss/_story-card.scss
@@ -84,3 +84,10 @@
     color: core.$purple-500;
   }
 }
+
+.uq-story-card--event,
+.uq-story-card--story {
+  .uq-story-card__description {
+    display: none;
+  }
+}
