fix: remove all text--link references in docs

--- a/packages/storybook-html/stories/components/core/written-style.html
+++ b/packages/storybook-html/stories/components/core/written-style.html
@@ -5,7 +5,7 @@
     <h2>Written style guide</h2>
     <div class="uq-grid">
       <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-5 uq-grid__col--xl-8">
-        <p>The <a class="text--link" href="https://marketing-communication.uq.edu.au/written-style-guide">Written style guide</a> is aligned with the <a class="text--link" href="https://www.stylemanual.gov.au/">Australian Government Style Manual</a> and <a class="text--link" href="https://www.macquariedictionary.com.au/">Macquarie Dictionary</a> but with some UQ-specific exceptions.
+        <p>The <a href="https://marketing-communication.uq.edu.au/written-style-guide">Written style guide</a> is aligned with the <a href="https://www.stylemanual.gov.au/">Australian Government Style Manual</a> and <a href="https://www.macquariedictionary.com.au/">Macquarie Dictionary</a> but with some UQ-specific exceptions.
         </p>
         <p>Presenting written information in a consistent way enhances an organisation’s professionalism and credibility. This written style guide explains how to prepare corporate documents and articles/stories/web items for The University of Queensland.</p>
         
@@ -19,7 +19,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="https://marketing-communication.uq.edu.au/written-style-guide">View Written style guide </a>
+              <a href="https://marketing-communication.uq.edu.au/written-style-guide">View Written style guide </a>
             </div>
           </div>
         </div>
@@ -40,7 +40,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="https://marketing-communication.uq.edu.au/files/8026/uq-written-style-quick-reference">UQ written style quick reference (PDF, 859.2 KB)</a>
+              <a href="https://marketing-communication.uq.edu.au/files/8026/uq-written-style-quick-reference">UQ written style quick reference (PDF, 859.2 KB)</a>
             </div>
           </div>
         </div>
@@ -57,7 +57,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="https://staff.uq.edu.au/information-and-services/communications-and-marketing/uq-brand/tone-voice-guidelines">UQ tone of voice guidelines</a>
+              <a href="https://staff.uq.edu.au/information-and-services/communications-and-marketing/uq-brand/tone-voice-guidelines">UQ tone of voice guidelines</a>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="http://copybank.uq.edu.au/">Copybank</a>
+              <a href="http://copybank.uq.edu.au/">Copybank</a>
             </div>
           </div>
         </div>
@@ -91,7 +91,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="https://guides.library.uq.edu.au/referencing">Referencing style guides</a>
+              <a href="https://guides.library.uq.edu.au/referencing">Referencing style guides</a>
             </div>
           </div>
         </div>
@@ -108,7 +108,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="https://marketing-communication.uq.edu.au/uq-brand-assets/access-uq-dam">UQ Digital Asset Manager (DAM)</a>
+              <a href="https://marketing-communication.uq.edu.au/uq-brand-assets/access-uq-dam">UQ Digital Asset Manager (DAM)</a>
             </div>
           </div>
         </div>
