--- a/packages/storybook-html/stories/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/stories/components/intro/kitchen-sink.html
@@ -609,7 +609,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="#">Learn more</a>
+              <a href="#">Learn more</a>
             </div>
           </div>
         </div>
@@ -631,7 +631,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="#">Learn more</a>
+              <a href="#">Learn more</a>
             </div>
           </div>
         </div>
@@ -653,7 +653,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="#">Learn more</a>
+              <a href="#">Learn more</a>
             </div>
           </div>
         </div>
@@ -675,7 +675,7 @@
               </div>
             </div>
             <div class="uq-card__actions">
-              <a class="text--link" href="#">Learn more</a>
+              <a href="#">Learn more</a>
             </div>
           </div>
         </div>
