--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -348,6 +348,7 @@
     color: white;
     padding: core.$space-m core.$space-l;
     text-decoration: none;
+    font-weight: core.$font-weight-normal;
 
     @media #{core.$screen-lg-up} {
       font-size: core.$font-size-s;
@@ -356,6 +357,8 @@
 
     &:hover {
       color: #d4c8de;
+      text-decoration: underline;
+      background-color: transparent;
       text-decoration: underline;
     }
   }
@@ -545,7 +548,7 @@
     color: core.$purple-500;
     font-weight: core.$font-weight-normal;
     text-decoration: none;
-    
+
     &:hover {
       background-color: transparent;
       text-decoration: underline;
@@ -778,7 +781,7 @@ body.no-scroll {
   }
 
   .uq-header__newglobal-nav-parent {
-    font-weight: 500;
+    font-weight: core.$font-weight-medium;
   }
 
   .uq-header__newglobal-nav-item {
