feat: footer link updates

--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -85,7 +85,7 @@
               <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://researchers.uq.edu.au" class="uq-footer__navigation-link">Find a researcher</a>
+              <a href="https://www.uq.edu.au/complaints-appeals" class="uq-footer__navigation-link">Make a complaint</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
