--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -200,7 +200,9 @@ $use-encapsulation: false !default;
 
       &:focus {
         border-color: core.$link;
-        box-shadow: 0 2px 0 0 core.$link, 0 0 0 1px core.$link inset;
+        box-shadow:
+          0 2px 0 0 core.$link,
+          0 0 0 1px core.$link inset;
       }
     }
 
